Retoques finales - media queries

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -105,7 +105,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -130,7 +130,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -150,7 +150,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -177,7 +177,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Años antes de convertirse en el tiránico Presidente de
                             Panem, el Coriolanus Snow de 18 años es la última
@@ -206,7 +206,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             En Ghostbusters: Apocalipsis Fantasma, la familia Spengler
                             regresa al lugar donde empezó todo -el icónico cuartel de
@@ -229,7 +229,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Cuando una joven estadounidense es enviada a Roma para
                             iniciar una vida de servicio a la Iglesia, se topa con una
@@ -246,7 +246,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Veinte años después de haber protagonizado un romance que
                             conquistó los medios de comunicación, un matrimonio se ve
@@ -263,7 +263,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras la muerte de su padre (Peter Mullan), Iris (Freya
                             Allan) descubre que ha heredado un antiguo bar en ruinas.
@@ -287,7 +287,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Al no poder derrotar a Aquaman la primera vez, Black
                             Manta, todavía impulsado por la necesidad de vengar la
@@ -311,7 +311,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Cassandra Webb es una paramédica en Manhattan que podría
                             tener habilidades clarividentes. Obligada a enfrentarse a
@@ -328,7 +328,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Del estudio que trajo Sound of Freedom, llega Después de
                             la muerte, una película que explora lo que ocurre después
