--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -108,7 +108,7 @@
         <div class="image-container">
             <img src="../img/acercade/154818.png" alt="Personas sentadas en el cine">
         </div>
-        <div class="image-container">
+        <div class="image-container wide">
             <img src="../img/acercade/154932.png" alt="Un camarógrafo trabajando">
         </div>
         <div class="image-container tall">
@@ -136,7 +136,7 @@
             <img src="../img/acercade/stock-photo-happy-businesspeople-laughing-while-collaborating-on-a-new-project-in-an-office-group-of-diverse-2159023891.jpg"
                 alt="Personas trabajando">
         </div>
-        <div class="image-container tall">
+        <div class="image-container wide">
             <img src="../img/acercade/im77777ages.png" alt="Creemos en el cine en todas sus formas de expresión">
         </div>
         <div class="image-container">
