--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -81,7 +81,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -101,7 +101,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -126,7 +126,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -146,7 +146,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -170,7 +170,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -190,7 +190,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -215,7 +215,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -235,7 +235,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -259,7 +259,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -279,7 +279,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -304,7 +304,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -324,7 +324,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -348,7 +348,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -368,7 +368,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -393,7 +393,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -413,7 +413,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -437,7 +437,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -457,7 +457,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -482,7 +482,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -502,7 +502,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
