--- a/pages/series.html
+++ b/pages/series.html
@@ -70,10 +70,11 @@
 
     <main>
         <div class="series">
-            <div class="main-header"><h2>Series</h2>
-            <p>Lista organizada y relevada por varias plataformas </p></div>
-        
-            <div class="grid ">
+            <div class="main-header">
+                <h2>Series</h2>
+                <p>Lista organizada y relevada por varias plataformas </p>
+            </div>
+            <div class="grid">
                 <div class="card" >
                     <a href="#"><img src="../img/series/breakingbad.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -81,7 +82,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -101,7 +102,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -126,7 +127,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -146,7 +147,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -170,7 +171,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -190,7 +191,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -215,7 +216,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -235,7 +236,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -259,7 +260,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -279,7 +280,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -304,7 +305,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -324,7 +325,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -348,7 +349,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -368,7 +369,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -393,7 +394,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -413,7 +414,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
@@ -437,7 +438,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Tras los sucesos de la primera parte acontecidos en el
                             planeta Arrakis, el joven Paul Atreides se une a la tribu
@@ -457,7 +458,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             ¡La batalla épica continúa! La película de Legendary
                             Pictures continúa el explosivo enfrentamiento de "Godzilla
@@ -482,7 +483,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Verano de 1957. El expiloto de carreras Enzo Ferrari está
                             en crisis. La bancarrota acecha a la empresa que él y su
@@ -502,7 +503,7 @@
                         </div>
                     </a>
                     <div class="overlay">
-                        <p class="sinopsis">sinopsis</p>
+                        <p class="sinopsis">Sinopsis</p>
                         <p class="overlay-text">
                             Protagonizada por Russell Crowe y Liam Hemsworth, una
                             operación encubierta de Fuerzas Especiales en el sur de
