Agrego value a los input radio

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -96,15 +96,15 @@
                 </table>
                 <div id="meeting">
                     <h3>¿Donde nos conociste?</h3>
-                    <label for="recomendacion"><input type="radio" id="recomendacion" name="meeting"> Recomendación
+                    <label for="recomendacion"><input type="radio" id="recomendacion" name="meeting" value="1"> Recomendación
                     </label>
-                    <label for="google"><input type="radio" id="google" name="meeting"> Google
+                    <label for="google"><input type="radio" id="google" name="meeting" value="2"> Google
                     </label>
-                    <label for="foro"><input type="radio" id="foro" name="meeting"> Foro
+                    <label for="foro"><input type="radio" id="foro" name="meeting" value="3"> Foro
                     </label>
-                    <label for="publicidad"><input type="radio" id="publicidad" name="meeting"> Publicidad
+                    <label for="publicidad"><input type="radio" id="publicidad" name="meeting" value="4"> Publicidad
                     </label>
-                    <label for="otros"><input type="radio" id="otros" name="meeting"> CAC 4.0
+                    <label for="otros"><input type="radio" id="otros" name="meeting" value="5"> CAC 4.0
                     </label>
                 </div>
                 <div id="div_calificacion">
