--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
@@ -72,14 +72,14 @@
 
     <main>
         <div>
-            <div class="banner">
+            <div id="bannerMovies" class="banner">
                 <img src="img/banners/22222222.png" alt="">
             </div>
         </div>
         <section class="peliculas">
             <h3>Películas destacadas</h3>
-            <div class="grid pelis">
-                <div class="card">
+            <div class="grid pelis" id="peliculas_destacadas">
+                <!-- <div class="card">
                     <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
@@ -345,7 +345,7 @@
                             muerte?
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <div>
@@ -355,8 +355,8 @@
         </div>
         <section class="series">
             <h3>Series destacadas</h3>
-            <div class="grid serie">
-                <div class="card">
+            <div class="grid serie" id="series_destacadas">
+                <!-- <div class="card">
                     <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
@@ -450,7 +450,7 @@
                             <p class="card-text">DUNE Part 2</p>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
